--- a/apps/dashboard/src/app/resources/edit/edit-resource.component.html
+++ b/apps/dashboard/src/app/resources/edit/edit-resource.component.html
@@ -13,11 +13,13 @@
       icon="edit"
       routerLink="profile"
       [active]="currentView === 'profile'"
+      paTooltip="resource.tooltip.edition"
       aspect="basic"></pa-button>
     <pa-button
       icon="label"
       routerLink="classification"
       [active]="currentView === 'classification'"
+      paTooltip="resource.tooltip.classification"
       aspect="basic"></pa-button>
   </div>
 </header>
