Fix typography in the widget

--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -73,7 +73,8 @@
   --font-weight-medium: 500;
   --font-weight-semi-bold: 600;
   --font-weight-bold: 700;
-  --font-family-body: var(--custom-font-family-body, 'Inter, sans-serif');
+  --nuclia-family: Inter, sans-serif;
+  --font-family-body: var(--custom-font-family-body, var(--nuclia-family));
   --font-size-title-m: var(--font-size-base);
   --font-weight-title-m: var(--font-weight-semi-bold);
   --line-height-body-s: calc(var(--font-size-base) * 1.125);
