--- a/apps/dashboard/src/app/resources/edit/profile/profile.component.html
+++ b/apps/dashboard/src/app/resources/edit/profile/profile.component.html
@@ -9,6 +9,7 @@
     </label>
     <pa-input
       id="title"
+      externalLabel
       formControlName="title"></pa-input>
   </div>
   <div>
@@ -19,6 +20,7 @@
     </label>
     <pa-input
       id="authors"
+      externalLabel
       formControlName="authors"></pa-input>
   </div>
   <div>
@@ -32,6 +34,7 @@
     </div>
     <pa-textarea
       id="summary"
+      externalLabel
       formControlName="summary"
       rows="5"></pa-textarea>
   </div>
