--- a/apps/dashboard/src/app/resources/edit/profile/text/text.component.html
+++ b/apps/dashboard/src/app/resources/edit/profile/text/text.component.html
@@ -1,1 +1,31 @@
-Text
+<form
+  [formGroup]="form"
+  (ngSubmit)="save()">
+  <pa-textarea
+    formControlName="text"
+    externalLabel
+    resizable="false"></pa-textarea>
+
+  <footer class="form-field-buttons">
+    <div class="save-actions">
+      <pa-button
+        kind="primary"
+        [disabled]="!form.valid || form.pristine || isSaving"
+        (click)="save()">
+        {{ 'generic.save' | translate }}
+      </pa-button>
+
+      <pa-button
+        aspect="basic"
+        [disabled]="form.pristine || isSaving"
+        (click)="cancel()">
+        {{ 'generic.cancel' | translate }}
+      </pa-button>
+    </div>
+    <pa-button
+      kind="destructive"
+      (click)="deleteField()">
+      {{ 'resource.field.delete' | translate }}
+    </pa-button>
+  </footer>
+</form>
