--- a/apps/dashboard/src/app/resources/edit/profile/link/link.component.html
+++ b/apps/dashboard/src/app/resources/edit/profile/link/link.component.html
@@ -29,6 +29,7 @@
     </div>
     <pa-button
       kind="destructive"
+      [disabled]="!isReady"
       (click)="deleteField()">
       {{ 'resource.field.delete' | translate }}
     </pa-button>
