--- a/apps/dashboard/src/app/resources/edit/profile/text/text.component.html
+++ b/apps/dashboard/src/app/resources/edit/profile/text/text.component.html
@@ -24,6 +24,7 @@
     </div>
     <pa-button
       kind="destructive"
+      [disabled]="!isReady"
       (click)="deleteField()">
       {{ 'resource.field.delete' | translate }}
     </pa-button>
