--- a/libs/common/src/lib/user/onboarding/onboarding.component.scss
+++ b/libs/common/src/lib/user/onboarding/onboarding.component.scss
@@ -50,4 +50,12 @@
       margin-bottom: rhythm(5);
     }
   }
+
+  .phone-field {
+    display: flex;
+    .phone-code {
+      width: rhythm(8);
+      margin-right: rhythm(1);
+    }
+  }
 }
