Use existing TextFieldFormat and add link validation

--- a/apps/dashboard/src/app/resources/edit/add-field/add-field.component.html
+++ b/apps/dashboard/src/app/resources/edit/add-field/add-field.component.html
@@ -55,6 +55,7 @@
       <pa-input
         id="link"
         formControlName="text"
+        [errorMessages]="textErrors"
         externalLabel></pa-input>
     </div>
   </ng-container>
