--- a/apps/dashboard/src/app/widgets/widget-generator.component.html
+++ b/apps/dashboard/src/app/widgets/widget-generator.component.html
@@ -80,6 +80,14 @@
             formControlName="filter">
             {{ 'stash.widgets.filter' | translate }}
           </pa-toggle>
+          <ng-container *ngIf="widgetMode === 'video'">
+            <pa-toggle
+              labelOnRight
+              help="stash.widgets.relations.help"
+              formControlName="relations">
+              {{ 'stash.widgets.relations' | translate }}
+            </pa-toggle>
+          </ng-container>
           <pa-toggle
             labelOnRight
             help="stash.widgets.navigateToLink.help"
