--- a/apps/dashboard/src/app/resources/edit/_edit-resource.tokens.scss
+++ b/apps/dashboard/src/app/resources/edit/_edit-resource.tokens.scss
@@ -4,3 +4,4 @@ $height-header: rhythm(7);
 $padding-top-page-container: rhythm(6);
 $margin-top-footer: rhythm(5);
 $padding-vertical-footer: rhythm(3);
+$footer-height: $margin-top-footer + $padding-vertical-footer * 2 + rhythm(5);
