Improve copy and fix viewer edit menu

--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -298,7 +298,7 @@
                 *ngIf="isMainView"
                 (click)="edit(row.resource.id)"
                 [disabled]="!(isAdminOrContrib | async)">
-                {{ 'generic.edit' | translate }}
+                {{ 'resource.edit' | translate }}
               </button>
               <button
                 mat-menu-item
